# fribidi

./: .cvsignore  .indent.pro  .travis.yml  AUTHORS  HACKING  Makefile.am  NEWS  README  README.md  THANKS  TODO  USERS  bootstrap  configure.ac  fribidi.pc.in  meson.build  meson_options.txt  notes.org
.ci/: build-c2man.sh
.github/workflows/: cifuzz.yml  make.yml  meson.yml
charset/: Headers.mk  Makefile.am  fribidi-char-sets-cap-rtl.c  fribidi-char-sets-cap-rtl.h  fribidi-char-sets-cp1255.c  fribidi-char-sets-cp1255.h  fribidi-char-sets-cp1256.c  fribidi-char-sets-cp1256.h  fribidi-char-sets-iso8859-6.c  fribidi-char-sets-iso8859-6.h  fribidi-char-sets-iso8859-8.c  fribidi-char-sets-iso8859-8.h  fribidi-char-sets-list.h  fribidi-char-sets-utf8.c  fribidi-char-sets-utf8.h  fribidi-char-sets.c  fribidi-char-sets.h
doc/: Doxyfile.in  Makefile.am  meson.build
fribidi-vs-unicode/: Makefile.am  SConstruct  test-character.c  test.c
gen.tab/: .cvsignore  Makefile.am  gen-arabic-shaping-tab.c  gen-bidi-type-tab.c  gen-brackets-tab.c  gen-brackets-type-tab.c  gen-joining-type-tab.c  gen-mirroring-tab.c  gen-unicode-version.c  packtab.c  packtab.h
gen.tab/unidata/: README  ReadMe.txt
gen.tab/unidata/extracted/: DerivedDecompositionType.txt
lib/: .cvsignore  Headers.mk  Makefile.am  arabic-misc.tab.i  bidi-type-table.i  bidi-types-list.h  bidi-types.h  common.h  debug.h  env.h  fribidi-arabic.c  fribidi-arabic.h  fribidi-begindecls.h  fribidi-bidi-type.c  fribidi-bidi-type.h  fribidi-bidi-types-list.h  fribidi-bidi-types.c  fribidi-bidi-types.h  fribidi-bidi.c  fribidi-bidi.h  fribidi-brackets.c  fribidi-brackets.h  fribidi-char-sets-cap-rtl.c  fribidi-common.h  fribidi-config.h.in  fribidi-deprecated.c  fribidi-deprecated.h  fribidi-enddecls.h  fribidi-env.c  fribidi-env.h  fribidi-flags.h  fribidi-joining-type.c  fribidi-joining-type.h  fribidi-joining-types-list.h  fribidi-joining-types.c  fribidi-joining-types.h  fribidi-joining.c  fribidi-joining.h  fribidi-mem.c  fribidi-mirroring.c  (+15 more)
test/: Makefile.am  caprtl2unicode.py  meson.build  run.tests  test-runner.py  test_CapRTL_explicit.input  test_CapRTL_explicit.reference  test_CapRTL_isolate.reference  test_UTF-8_persian.input  test_UTF-8_persian.reference  test_UTF-8_reordernsm.reference
test/fuzzing/: crash-69ebdb74927bd63911e9af32e7da3b0216279461  crash-ca62f992817f09c2072b0bb6c41f061d20bb7efe
test/unicode-conformance/: BidiCharacterTest.c  Makefile.am  meson.build  test.c
