
libfribidi_mans = \
		fribidi_get_bidi_type.3
		fribidi_get_bidi_types.3
		fribidi_log2vis.3
		fribidi_log2vis_get_embedding_levels.3
		fribidi_remove_bidi_marks.3
		fribidi_get_mirror_char.3
		fribidi_debug_status.3
		fribidi_set_debug.3
		fribidi_mirroring_status.3
		fribidi_set_mirroring.3
		fribidi_reorder_nsm_status.3
		fribidi_set_reorder_nsm.3


if FRIBIDI_CHARSETS


endif

headers = 
include $(top_srcdir)/charset/Headers.mk
headers += $(libfribidi_char_sets_la_headers)
include $(top_srcdir)/lib/Headers.mk
headers += $(libfribidi_la_headers)

